# neuro-connect

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  config.rs  goldberg.rs  lan_discovery.rs  local_db.rs  main.rs  update_manager.rs  voice_manager.rs
apps/desktop/src/components/: Avatar.css  Avatar.tsx  ChannelSidebar.tsx  ChatView.css  ChatView.tsx  ContextMenu.css  ContextMenu.tsx  EmojiPicker.css  EmojiPicker.tsx  FriendsHome.css  FriendsHome.tsx  GameHostsView.css  GameHostsView.tsx  Markdown.tsx  MediaRelayBar.css  MediaRelayBar.tsx  MemberPanel.tsx  MessageItem.css  MessageItem.tsx  Modal.css  Modal.tsx  ServerRail.tsx  SettingsView.css  SettingsView.tsx  SharePicker.css  SharePicker.tsx  Toast.css  Toast.tsx  UpdateModal.css  UpdateModal.tsx  VoicePanel.css  VoicePanel.tsx
apps/desktop/src/lib/: api.ts  native.ts  types.ts
apps/desktop/src/lib/voice/: VoiceSession.ts
apps/desktop/src/pages/: AuthPage.css  AuthPage.tsx  MainShell.css  MainShell.tsx
apps/desktop/src/styles/: fonts.css  global.css
apps/host/: Cargo.toml
apps/host/src/: config_edit.rs  main.rs  process.rs
apps/server/: Cargo.toml
apps/server/src/: activity_log.rs  admin_api.rs  auth_api.rs  chat_handler.rs  config.rs  db.rs  dev_mode.rs  friends.rs  game_hosts.rs  jwt_util.rs  lan_discovery.rs  main.rs  media_relay.rs  port_guard.rs  server_core.rs  state.rs  updates.rs  voice_manager.rs
assets/fonts/: OFL.txt  README.md
assets/sounds/: README.md
configs/: client.example.toml  server.example.toml  server.toml
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  lib.rs  models.rs  protocol.rs  validate.rs
docs/: ANDROID.md  BUILD_RELEASE.md  CONFIGURATION.md  DEVELOPMENT.md  FEATURE_MATRIX.md  FIREWALL.md  GAME_HOSTING.md  INSTALL.md  LINUX_DIST.md  MACOS.md  PROMPT_0.4.0.md  SERVER_SETUP.md  TROUBLESHOOTING.md  VOICE.md  VPS_HOSTING.md
requirements/: android.md  linux.md  macos.md  windows.md
scripts/: README.md  build-all.bat  build-all.ps1  build-all.sh  build-android.bat  build-android.ps1  build-appimage.bat  build-appimage.ps1  build-appimage.sh  build-client.bat  build-client.ps1  build-client.sh  build-portable-windows.ps1  build-server.bat  build-server.ps1  build-server.sh  dev-client.bat  dev-client.sh  fetch-fonts.ps1  fetch-fonts.sh  neuro-connect.sh  package-dist.bat  package-dist.ps1  start-client.bat  start-client.sh  start-server.bat  start-server.sh  stop-server.bat  stop-server.sh
web/: README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/android/: README.md
web/android/app/: build.gradle
web/android/app/src/main/java/com/yetanotherneuron/neuroconnect/: MainActivity.java
web/android/app/src/main/res/values/: strings.xml
web/src/: App.tsx
web/src/components/: Chat.css  Chat.tsx  Settings.css  Settings.tsx
web/src/lib/: session.ts
web/src/pages/: AuthPage.tsx  AuthScreen.tsx  Shell.tsx  ShellScreen.tsx
web/src/styles/: global.css
website/: README.md  config.js  index.html  main.js  styles.css
website/assets/screenshots/: README.md
