[workspace]
resolver = "2"
members = [
    "crates/shared",
    "apps/server",
    "apps/host",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["yetanotherneuron"]
license = "MIT"
repository = "https://github.com/yetanotherneuron/neuro-connect"

[workspace.dependencies]
neuro-shared = { path = "crates/shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
jsonwebtoken = "9"
sha2 = "0.10"
base64 = "0.22"
regex = "1"
futures-util = "0.3"
dashmap = "6"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
