[package]
name = "neuro-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Neuro Server tray host - start/stop, logs, toggle Dev Mode"

[[bin]]
name = "neuro-host"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tray-icon = "0.19"
tao = "0.30"
image = "0.25"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }
