[package]
name = "neuro-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Self-hosted Neuro Connect community server"

[[bin]]
name = "neuro-server"
path = "src/main.rs"

[dependencies]
neuro-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
axum = { workspace = true, features = ["ws", "multipart"] }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
mdns-sd = "0.13"
hostname = "0.4"
