[package]
name = "neuro-connect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Neuro Connect desktop client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
neuro-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
toml = { version = "0.8", features = ["display"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
sha2 = { workspace = true }
zip = "2"
dirs = "6"
mdns-sd = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
